🐙 Removed a stray curly bracket

--- a/style.css
+++ b/style.css
@@ -37,6 +37,6 @@
     background-color: #a09b9b;
     margin-top: 20px;
     padding: 10px;
-    text-align: center; {
+    text-align: center;
 
 }
